--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@
     --shadow-color: rgba(0, 0, 0, .2)
 }
 
+.dark-mode {
+    --bg-color: #0b061f;
+    --text-color: #fdfdfd;
+    --shadow-color: rgba(0, 0, 0, .7)
+}
+
 html {
     font-size: 62.5%;
     overflow-x: hidden;
@@ -196,6 +202,25 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: professionRotate 13s ease-out infinite;
+}
+
+@keyframes professionRotate {
+    0%,20% {
+        transform: rotate(0deg);
+    }
+    25%,45% {
+        transform: rotate(-90deg);
+    }
+    50%,70% {
+        transform: rotate(-180deg);
+    }
+    75%,95% {
+        transform: rotate(-270deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
 }
 
 .home .profession-box .profession {
@@ -825,8 +850,57 @@ span {
         }
     }
 
-    @media (max-width:617px) {
+    @media (max-width: 617px) {
         .portfolio .portfolio-container {
             grid-template-columns: 1fr;
+        }
+    }
+
+    @media (max-width: 450px) {
+        html {
+            font-size: 50%;
+        }
+
+        #darkMode-icon {
+            right: 6rem;
+        }
+
+        .home {
+            padding: 0 3% 30rem;
+        }
+
+        .home .profession-box .profession:nth-child(1) {
+            transform: rotate(-90deg) translate(-110px, -220px);
+        }
+
+        .home .profession-box .profession:nth-child(2) {
+            transform: rotate(0deg) translate(5px, -335px);
+        }
+
+        .home .profession-box .profession:nth-child(3) {
+            transform: rotate(90deg) translate(-105px, -440px);
+        }
+
+        .home .profession-box .profession:nth-child(4) {
+            transform: rotate(180deg) translate(-210px, -335px);
+        }
+
+        .contact form .input-box input {
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 365px) {
+        .about-img img {
+            width: 90vw;
+        }
+
+        .footer {
+            flex-direction: column-reverse;
+        }
+
+        .footer p {
+            text-align: center;
+            margin-top: 2rem;
         }
     }
