Contact form & encrypt email finished

--- a/style.css
+++ b/style.css
@@ -589,12 +589,20 @@ span {
     margin: 12px 0;
 }
 
+.field.error .item {
+    border-color: #d93025;
+}
+
 .field .error-txt {
     font-size: 1.4rem;
     color: #d93025;
     text-align: left;
     margin: -5px 0 10px;
     display: none;
+}
+
+.field.error .error-txt {
+    display: block;
 }
 
 form .textarea-field .error-txt {
